renamed php/mailer.php to php/index.php

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -53,7 +53,7 @@
 
 						<!-- BEGIN CONTACT FORM -->
 						<h2>testing 123</h2>
-						<form id="contact-form"  method="post" action="../php/mailer.php">
+						<form id="contact-form"  method="post" action="../php">
 							<div class="form-group">
 								<label for="name">Name</label>
 								<div class="input-group">
